# taskclaw

./: .gitignore  SPEC.md  package-lock.json  package.json
.github/workflows/: release.yml
db-test/: Cargo.toml
db-test/src/: main.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  gdrive.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: contexts.rs  files.rs  flags.rs  mod.rs  sync.rs  task_tests.rs  tasks.rs  webapi.rs  windows.rs
src/lib/: api.ts  parsing.test.ts  parsing.ts  planFilter.test.ts  planFilter.ts  types.ts
src/lib/components/: ColorPicker.svelte  ContextMenu.svelte  GroupedView.svelte  LockScreen.svelte  PlanView.svelte  Prefs.svelte  RapidInput.svelte  RecurrenceDialog.svelte  ReminderWindow.svelte  Sidebar.svelte  SyncBar.svelte  TaskDetail.svelte  TaskRow.svelte  TaskTree.svelte  ViewSettingsDialog.svelte  ViewsPanel.svelte
src/lib/stores/: tasks.ts
src/routes/: +page.svelte
src/routes/reminder/: +page.svelte
