[package]
name = "taskclaw"
version = "0.1.0"
description = "Fast portable task manager"
authors = ["yellowcar1101"]
edition = "2021"

[lib]
name = "taskclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
